Fix radios showing up on firefox

--- a/css/main.css
+++ b/css/main.css
@@ -188,10 +188,7 @@ ol.steps li {
 }
 
 .steps input[type="radio"] {
-	max-width: 0;
-	max-height: 0;
-	margin: 0;
-	padding: 0;
+	display: none;
 }
 
 .steps label {
